# raytracer

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  run.sh  vcpkg.json
.devcontainer/: devcontainer.json
LinearAlgebra/: CMakeLists.txt
LinearAlgebra/include/Tensor/: Storage.hpp  Tensor.hpp
LinearAlgebra/src/: main.cpp
assets/scenes/: scene01.xml  scene02.xml
docs/projects/: project02.md  project03.md  project04.md  project05.md  project06.md  project07.md  project08.md  project09.md
docs/projects/docs/: problema_esfera_distante.md
docs/projects/scenes/transformations/: 03_dinning_chair.xml  03_dinning_set.xml  03_dinning_set_geometry.xml  03_dinning_table.xml
docs/projects/trimesh/code/: CMakeLists.txt  README.md
docs/projects/trimesh/code/src/: main.cpp  rt3.hpp  triangle.cpp  triangle.hpp
extras/: sphere-builder.cpp
include/Api/: Api.cpp  Api.hpp
include/Core/: CTMStack.cpp  CTMStack.hpp  GraphicsState.cpp  GraphicsState.hpp  ParamSet.cpp  ParamSet.hpp
include/Image/: Background.cpp  Background.hpp  Image.cpp  Image.hpp  RGBColor.cpp  RGBColor.hpp
include/Images/: Background.cpp  Background.hpp  Image.cpp  Image.hpp  RGBColor.cpp  RGBColor.hpp  RGBPixel.cpp  RGBPixel.hpp
include/Integrator/: BlinnPhongIntegrator.cpp  BlinnPhongIntegrator.hpp  DepthMapIntegrator.cpp  DepthMapIntegrator.hpp  Integrator.cpp  Integrator.hpp  IntegratorFactory.cpp  IntegratorFactory.hpp  NormalMapIntegrator.cpp  NormalMapIntegrator.hpp  RayCastIntegrator.cpp  RayCastIntegrator.hpp  ToonIntegrator.cpp  ToonIntegrator.hpp
include/Math/: Axis.hpp  Bounds3.cpp  Bounds3.hpp  Matrix.cpp  Matrix.hpp  Point2.cpp  Point2.hpp  Point3.cpp  Point3.hpp  Ray.hpp  Routines.cpp  Routines.hpp  Transform.cpp  Transform.hpp  Vector3.cpp  Vector3.hpp
include/Math/Tensor/: Storage.hpp  Tensor.hpp
include/Objects/: GeometricPrimitive.cpp  GeometricPrimitive.hpp  Material.cpp  Material.hpp  MaterialFactory.cpp  MaterialFactory.hpp  ObjectFactory.cpp  ObjectFactory.hpp  Primitive.hpp  PrimitiveFactory.cpp  PrimitiveFactory.hpp  Surfel.hpp
include/Objects/Aggregate/: AggregateFactory.cpp  AggregateFactory.hpp  AggregatePrimitive.cpp  AggregatePrimitive.hpp  BVHAccel.cpp  BVHAccel.hpp  LinearBVHAccel.cpp  LinearBVHAccel.hpp  PrimitiveList.cpp  PrimitiveList.hpp
include/Objects/Light/: AmbientLight.cpp  AmbientLight.hpp  DirectionalLight.cpp  DirectionalLight.hpp  Light.cpp  Light.hpp  LightFactory.cpp  LightFactory.hpp  PointLight.cpp  PointLight.hpp  SpotLight.cpp  SpotLight.hpp
include/Objects/Materials/: BlinnMaterial.cpp  BlinnMaterial.hpp  FlatMaterial.cpp  FlatMaterial.hpp  GridMaterial.cpp  GridMaterial.hpp  Material.cpp  Material.hpp  MaterialFactory.cpp  MaterialFactory.hpp  ToonMaterial.cpp  ToonMaterial.hpp
include/Objects/Shapes/: Box.cpp  Box.hpp  Cube.cpp  Cube.hpp  Cylinder.cpp  Cylinder.hpp  Plan.cpp  Plan.hpp  Plane.cpp  Plane.hpp  Shape.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
include/Parser/: ParserScene.cpp  ParserScene.hpp
include/Scene/: Background.cpp  Background.hpp  Camera.cpp  Camera.hpp  Film.cpp  Film.hpp  Scene.cpp  Scene.hpp
include/Scene/Background/: Background.hpp  BackgroundColor.cpp  BackgroundColor.hpp  BackgroundFactory.cpp  BackgroundFactory.hpp  BackgroundImage.cpp  BackgroundImage.hpp
include/Utils/: ConvertFunction.cpp  ConvertFunction.hpp  ImageUtils.cpp  ImageUtils.hpp  NetpbmUtils.cpp  NetpbmUtils.hpp  ProgressBar.cpp  ProgressBar.hpp  RunningOptions.cpp  RunningOptions.hpp  TensorUtils.cpp  TensorUtils.hpp  Utils.cpp  Utils.hpp
include/parser/: ParserScene.cpp  ParserScene.hpp
scenes/: scene01.xml  scene02.xml  scene03-1.xml  scene03-2.xml  scene03.xml  scene04.xml  scene05.xml  scene06.xml  scene07.xml  scene08.xml  scene09.xml  scene10.xml  scene11.xml  scene12.xml  scene13.xml  scene14.xml  scene15.xml  scene16.xml  scene17.xml  scene18.xml  scene19.xml  scene20.xml  scene21.xml  scene22.xml  scene23.xml  scene24.xml  scene25.xml  scene26.xml  scene27.1.xml  scene27.xml  scene28.1.xml  scene28.xml  scene28_cubes.xml  scene29.xml  scene30.xml  scene31.xml  scene32.xml  scene33.xml  scene34.xml  scene35.xml  (+26 more)
scenes/references/: 03_dinning_chair.xml  03_dinning_table.xml  geometry_spheres.xml  geometry_spheres2.xml  girl.xml  line.xml  pyramid.xml  pyramid_jade.xml  tetra.xml  triangular.xml
src/: main.cpp
tests/: CMakeLists.txt
tests/Core/: ParamSetTests.cpp
tests/Image/: BackgroundTests.cpp  ImageTests.cpp  RGBColorTests.cpp
tests/Images/: BackgroundTests.cpp  ImageTests.cpp  RGBColorTests.cpp  RGBPixelTests.cpp
tests/Parser/: ParserSceneTests.cpp
tests/Utils/: ConvertFunctionTests.cpp  ImageUtilsTests.cpp  NetpbmUtilsTests.cpp  RunningOptionsTests.cpp
tests/core/: ParamSetTests.cpp
